css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;500;600;700;800&family=Roboto:wght@400;500;700;900&display=swap');
/* font-family: 'Open Sans', sans-serif;
font-family: 'Poppins', sans-serif;
font-family: 'Roboto', sans-serif; */
*{
    padding: 0%;
    margin: 0%;
    box-sizing: border-box;
}
:root{
    --main : #0A69C1;
    --underline:#FFB802;
    --highlight:rgba(255, 255, 255, 0.808);
    --blackcolor: rgba(0, 0, 0, 0.59);
    --error: rgba(255, 61, 0, 1);
    --success: rgba(76, 175, 80, 1);
    --mainH : #083f72;
    --shadowColor: #181717c7;
    --shadow: 0 0 12px #181717a4;
    --textAreaShadow: var(--textAreaShadow);
}
body{
    height: 100%;
    width: 100%;
    overflow-x: hidden;   
    overflow-y: hidden; 
    background: linear-gradient(0deg, rgba(56, 123, 160, 0.06), rgba(56, 123, 160, 0.06)), url("../assets/images/email-pattern.png");
}
html{
    width:100%;
    overflow-x: hidden;
    
}
.main-bg{
    padding-top:20px;
    padding-bottom:20px;
    margin: 0px;
    background-color: var(--main);
}
.highligh-f{
    color: #fff;
}
.highlight{
    color:var(--highlight) ;
}
.l-desc{
    width: 4px;
    height: 4px;
    border-radius: 177px;
    padding: 5px;
    background-color: white;
}
/* =========== Start: mobile header ======== */
.content-wrapper{
    height: 100%;
    width: 100%;
    overflow-x: hidden;
}
.header-wrapper{
    background-color:var(--main);
    width: 100%;
}
.nav-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding:20px;
}
.oscreen{
    display: none;
}
.reveal div{
    width: 19px;
    height: 2px;
    background-color: var(--underline);
    margin: 3px;
    transition: all 0.5s ease-in-out;
}
/* start navbar */
.log{
    color: var(--underline);
    font-size: 12px;
    font-family: 'Roboto', sans-serif; 
}
.nav ul {
    padding: 0;
    position: absolute;
    right: 0px;
    height: 100vh;
    top: 8vh;
    width: 60%;
    background-color: var(--main);
    display: none;
    flex-direction: column;
    align-items: center;
    transform: translateX(100%);
    transition: transform 0.5s ease-in-out;
    z-index: 9999999;
}
.nav ul {
    display: none !important;
}
.nav ul li{
    margin: 20px;
    list-style: none;
    cursor: pointer;
}
.nav ul li a:hover{
    color: var(--highlight) !important;
}
.nav ul li a{
    color:var(--underline);
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
}
.active-link{
    color: var(--highlight) !important;
}
.login-btn{
    padding: 12px;
    width: 100px;
    color: var(--underline);
    border: 1px solid var(--underline);
    background-color: rgba(255, 255, 255, 0);
    box-sizing: border-box;
    filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.35));
    border-radius: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.login-btn:hover{  
    border: 1px solid var(--highlight); 
    color: var(--highlight);   
}
.signup-btn{
    padding: 12px;
    width: 100px;
    color: var(--highlight);
    border: 1px solid var(--underline);
    background-color: var(--underline);
    box-sizing: border-box;
    filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.35));
    border-radius: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}
.signup-btn:hover{  
    border: 1px solid var(--highlight); 
    color: var(--highlight);   
    background-color:  rgba(255, 255, 255, 0) ;
}
.showNav ul{   
    transform: translateX(0%); 
    display: flex !important;
}
@keyframes navAnimation{

    from{
        opacity:0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }

}
.toggleBugger .line1{
    transform:  rotate(-45deg) translate(-5px,2px);
    
 }
.toggleBugger .line2{
    opacity: 0;
    
}
.toggleBugger .line3{
    transform:  rotate(45deg) translate(-5px,-2px);
    
}
.user-profile {
  width: 40px;
  height: 40px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;  
  border : 1px solid var(--underline);
  border-radius: 100%;
  box-shadow: var(--shadow);  
  transition: all 0.2s ease-in-out;
  padding: 0px;
  margin-left: 5px;
}
.user-profile img{
  width: 100%;
  height: 100%;
  transition: all 0.2s ease-in-out;
  border-radius: 100%;
}
.user-profile img:hover{
  width: 100%;
  height: 100%;
  border : none;
  border-radius: 100%;
  box-shadow: 0 0 12px var(--shadowColor);  
}
/* End:: navbar */

/* start:: header content */
.m-quotes p{
    font-size: 14px;
    color:var(--highlight);
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
}
.m-quotes{
    display: flex;
    padding: 20px;
    width: 100%;
    z-index: 9;
}
.m-quotes img{
    width:12px;
}
.m-header{
    width: 100%;
    height: 500px;
    background-size: cover;
    background-repeat: no-repeat;
    background-image:  linear-gradient(0deg, rgba(0, 0, 0, 0.596), rgba(0, 0, 0, 0.363)),url("../assets/images/8604D572-1E97-4429-BB41-8E9602F21499.png");
    position: relative;
    clear:both;
}

.svg-header-q{
    margin-right: 8px;
}
.cr{
    width: 100%;
    text-align: center;
    margin-top: 40px;
}
.cr p{
    font-size: 14px;
}
.btn-reach-me{
    display:  flex;
    justify-content: center;
    align-items: center;
    margin-top:70px ;
}
.btn-reach-me button{
    padding: 10px;
    width: 187px;
    border-radius: 20px;
    border: none;
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 23px;
    background-color: var(--underline);
    color: var(--highlight);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    transition: 0.1s ease-in;
    cursor: pointer;
}
.btn-reach-me button:hover{
    color: var(--highlight);   
    background-color:  rgba(255, 255, 255, 0);
}
/* ... */

